# universalCompanionManagementSystem

./: README.md
Backend/: .env.example  .flake8  mypy.ini  pyproject.toml
Backend/apps/business/dispute/: apps.py
Backend/apps/common/: models.py
Backend/apps/identity/: models.py
Backend/apps/identity/migrations/: 0001_initial.py
Backend/config/: settings.py  urls.py
Backend/docs/: DEVELOPMENT_PROGRESS.md  PROJECT.md
Frontend/: eslint.config.ts  package-lock.json  package.json  vite.config.ts
Frontend/src/: main.ts
