[project]
name = "Backend"
version = "0.1.0"
description = "Django REST API Service"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=4.2.0",
    "django-redis>=6.0.0",
    "django-stubs[compatible-mypy]>=5.2.2",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "mypy>=1.0.0",
    "django-stubs[compatible-mypy]>=4.2.0",
    "factory-boy>=3.2.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "apps*"]
